# rust-for-cpp-devs

./: Cargo.toml  README.md
01_basic_syntax/: 01_variables.rs  02_control_flow.rs
02_common_uses/: 01_arrays_and_slices.cpp  01_arrays_and_slices.rs  02_tuples.cpp  02_tuples.rs  03_user_types.cpp  03_user_types.rs  04_interfaces.cpp  04_interfaces.rs  05_enums.rs  05_variant.cpp  06_iterators.cpp  06_iterators.rs
03_borrow_checking/: 01_references.rs
04_error_handling/: 01_result.rs  02_try_operator.rs
05_basic_exercises/: 01_fizz_buzz.cpp  02_palindrome_io.cpp
solutions/: 02_palindrome_io.rs  fizz_buzz.rs
